Fix padding , spacing for iPad and other tablets

--- a/app/thuat-ngu/thuat_ngu.css
+++ b/app/thuat-ngu/thuat_ngu.css
@@ -481,15 +481,18 @@
   .container.glossary-search-row {
     max-width: 100% !important;
     width: 100% !important;
+    padding: unset;
   }
 
   .dictionary-list-alphabet {
-    padding: 5% 6%;
+    /* padding: 5% 3.5%; */
+    padding: 0% 3.5% 3% 3.5%;
   }
 
   .dictionary-list-alphabet .container {
     max-width: 100% !important;
     width: 100% !important;
+    padding : unset;
   }
 
   .glossary-group {
@@ -551,7 +554,7 @@
   section.buy-crypto,
   section.section-sale,
   footer.footer {
-    padding: 4% 5%;
+    padding: 4% 3.5%;
   }
 
   .nivex-heading-title-gradient {
@@ -587,7 +590,7 @@
 
   section.glossary-search-section {
     background: #000;
-    padding: 4% 5%;
+    padding: 4% 3.5%;
   }
 
   .glossary-search-row {
@@ -646,15 +649,18 @@
   .container.glossary-search-row {
     max-width: 100% !important;
     width: 100% !important;
+    padding: unset;
   }
 
   .dictionary-list-alphabet {
-    padding: 4% 6%;
+    /* padding: 4% 3.5%; */
+    padding: 0% 3.5% 4% 3.5%;
   }
 
   .dictionary-list-alphabet .container {
     max-width: 100% !important;
     width: 100% !important;
+    padding: unset;
   }
 
   .glossary-group {
@@ -712,11 +718,13 @@
 
 /* Responsive for iPad Air 820 - vertical */
 @media (min-width: 768px) and (max-width: 1023px) {
-  section.page-title,
+  section.page-title {
+    padding: 4% 3.5%;
+  }
   section.buy-crypto,
   section.section-sale,
   footer.footer {
-    padding: 6% 4%;
+    padding: 5% 3.5%;
   }
 
   .nivex-heading-title-gradient {
@@ -752,7 +760,7 @@
 
   section.glossary-search-section {
     background: #000;
-    padding: 6% 4%;
+    padding: 5% 3.5%;
   }
 
   .glossary-search-row {
@@ -812,15 +820,17 @@
   .container.glossary-search-row {
     max-width: 100% !important;
     width: 100% !important;
+    padding: unset;
   }
 
   .dictionary-list-alphabet {
-    padding: 6% 5%;
+    padding: 0% 3.5% 3% 3.5%;
   }
 
   .dictionary-list-alphabet .container {
     max-width: 100% !important;
     width: 100% !important;
+    padding: unset;
   }
 
   .glossary-group {
